--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
 
 <body>
   <div id="app">
-    <img :src="image" alt="">
-    <h1>{{product}}</h1>
-    <a :href="url">Nouran </a>
+    <div class="product-display">
+      <div class="product-container">
+        <div class="product-image">
+          <img :src="image" alt="">
+        </div>
+        <div class="product-info">
+          <h1>{{product}}</h1>
+          <p v-if='inStock'>In stock</p>
+          <p v-else>Out of stock</p>
+          <a :href="url">Nouran </a>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Import App Js -->
