--- a/index.html
+++ b/index.html
@@ -1,39 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <title>Vue Mastery</title>
-  <!-- Import Styles -->
-  <link rel="stylesheet" href="./assets/styles.css" />
-  <!-- Import Vue.js -->
-  <script src="https://unpkg.com/vue@next"></script>
-</head>
-
-<body>
-  <div id="app">
-    <div class="product-display">
-      <div class="product-container">
-        <div class="product-image">
-          <img :src="image" alt="">
-        </div>
-        <div class="product-info">
-          <h1>{{product}}</h1>
-          <p v-if='inStock'>In stock</p>
-          <p v-else>Out of stock</p>
-          <a :href="url">Nouran </a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Import App Js -->
-  <script src="./main.js"></script>
-
-  <!-- Mount App -->
-  <script>
-    const mountedApp = app.mount('#app');
-  </script>
-</body>
-
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
